--- a/OS/Contiki/.project
+++ b/OS/Contiki/.project
@@ -3,6 +3,8 @@
 	<name>Contiki</name>
 	<comment></comment>
 	<projects>
+		<project>ControlNodeV2</project>
+		<project>Coverage</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
@@ -73,5 +75,6 @@
 		<nature>org.eclipse.cdt.core.cnature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
+		<nature>dk.xpg.msp430eclipse.msp430nature</nature>
 	</natures>
 </projectDescription>
