--- a/OS/Contiki/platform/wsn430/Makefile.wsn430
+++ b/OS/Contiki/platform/wsn430/Makefile.wsn430
@@ -7,7 +7,7 @@ WSN430 = $(CONTIKI)/../..
 #
 # To set the default radio, uncomment one line
 #
-#RADIO=WITH_CC1101
+RADIO=WITH_CC1101
 #RADIO=WITH_CC2420
 #
 #
@@ -66,7 +66,7 @@ endif
 
 CONTIKI_TARGET_SOURCEFILES += $(ARCH) $(UIPDRIVERS) $(CONTIKI_TARGET_MAIN)
 
-MCU=msp430x1611
+MCU=msp430f1611
 include $(CONTIKI)/cpu/msp430/Makefile.msp430
 
 
