--- a/OS/Contiki/examples/01_hello-world/Makefile
+++ b/OS/Contiki/examples/01_hello-world/Makefile
@@ -3,5 +3,8 @@ TARGET = wsn430
 CONTIKI_PROJECT = hello-world
 all: $(CONTIKI_PROJECT)
 
+export CFLAGS += -g -gdwarf-2
+export ASFLAGS += -g --gdwarf-2
+
 CONTIKI = ../..
 include $(CONTIKI)/Makefile.include
