--- a/OS/Contiki/examples/05_ipv6/Makefile
+++ b/OS/Contiki/examples/05_ipv6/Makefile
@@ -2,6 +2,8 @@ all: ipv6-udp-server ipv6-udp-client
 TARGET = wsn430
 
 UIP_CONF_IPV6=1
+#export CFLAGS += -g -gdwarf-2 -feliminate-unused-debug-symbols -feliminate-dwarf2-dups
+#export ASFLAGS += -g --gdwarf-2 --feliminate-unused-debug-symbols --feliminate-dwarf2-dups
 
 CONTIKI = ../..
 include $(CONTIKI)/Makefile.include
